# vyapaarai

./: .env.example  .gitignore  .lambdaignore  API_Integration_Verification_Report.md  AUDIT_FILES_EXAMINED.txt  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  AWS_DEPLOYMENT_GUIDE.md  AWS_STATUS_EXPLANATION.md  CHANGELOG.md  CLAUDE.md  CRITICAL_FIXES_GUIDE.md  Complete_API_Implementation_Report.md  Customer_Readiness_Analysis_Report.md  DOCUMENTATION_CHANGELOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.lambda  FRONTEND_AUDIT_REPORT.md  Final_Integration_Summary.md  Full_Stack_Integration_Test_Report.md  HOW_TO_CHECK_DYNAMODB.md  Inventory_Deployment_Report.md  Inventory_Management_Implementation_Report.md  Lambda_Cleanup_Success_Report.md  MOCK_DATA_REMOVED.md  Order_Inventory_Bug_Fix_Report.md  Order_Inventory_Integration_Fix_Report.md  Order_Payment_Integration_Report.md  POSTGRES_SETUP_COMPLETE.md  Payment_Integration_Implementation_Report.md  Production_Deployment_Setup_Report.md  REACT_HOSTING_OPTIONS.md  README-TESTING.md  README.md  Real_API_Integration_Fix_Report.md  Real_Time_Functionality_Analysis_Report.md  SETUP_COMPLETE_SUMMARY.md  STORE_FILTERING_FIX.md  TECHNICAL_DESIGN_DOCUMENT.md  TEST_LOGIN_SETUP.md  (+17 more)
ai-agent/: pyproject.toml
backend/: .env.aws  .env.production  AUTONOMOUS_WORK_SUMMARY.md  DATABASE_LOCATION_GUIDE.md  Dockerfile.lambda-deps  Dockerfile.minimal  INVENTORY_MIGRATION_COMPLETE.md  LAMBDA_DEPLOYMENT_STATUS.md  LAMBDA_ERROR_DIAGNOSIS.md  ORDER_INVENTORY_INTEGRATION_COMPLETE.md  README.md  WAKE_UP_README.md  customer_auth_requirements.txt  pytest.ini  (+21 more)
(+389 files in other folders)
