[project]
name = "vyaparai-ai-agent"
version = "0.1.0"
description = "VyaparAI AI Agent"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "google-generativeai (==0.7.0)",
    "langchain (==0.3.0)",
    "langgraph (==0.2.28)",
    "redis (==5.1.0)",
    "asyncio (==3.4.3)",
    "tenacity (==8.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
