[project]
name = "vyaparai-backend"
version = "0.1.0"
description = "VyaparAI Backend API"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (==0.31.0)",
    "google-generativeai (==0.7.0)",
    "langchain (==0.3.0)",
    "langchain-google-genai (==2.0.0)",
    "pydantic (==2.9.2)",
    "redis (==5.1.0)",
    "python-multipart (==0.0.12)",
    "google-cloud-aiplatform (==1.70.0)",
    "httpx (==0.27.2)",
    "pydantic-settings (==2.5.2)",
    "python-ulid (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
moto = "^5.1.20"
pytest-asyncio = "^1.3.0"

